sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:7: error: type mismatch;
 found   : Int(0)
 required: java.awt.Color
  var couleur:Color = BLEU
                      ^DutchFlagAlgo:10: error: type mismatch;
 found   : Int
 required: java.awt.Color
    couleur = getCouleur(i)
                        ^